--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "bun --watch src/index.ts"
   },
   "dependencies": {
-    "@spacemangaming/daemon": "0.2.0-beta.1",
     "@solana/web3.js": "latest",
+    "@spacemangaming/daemon": "=0.2.0-beta.2",
+    "@types/bun": "^1.2.8",
     "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
     "@types/node": "^20.0.0"
   }
-} 
+}
