--- a/dark_forest/mcp/package.json
+++ b/dark_forest/mcp/package.json
@@ -21,7 +21,7 @@
     "@darkforest_eth/network": "6.7.29",
     "@darkforest_eth/types": "6.7.29",
     "@darkforest_eth/constants": "6.7.29",
-    "@darkforest_eth/contracts": "6.7.29",
+    "@darkforest_eth/contracts": "file:../contracts",
     "@darkforest_eth/serde": "6.7.29",
     "@darkforest_eth/hashing": "6.7.29",
     "@darkforest_eth/gamelogic": "6.7.29",
