--- a/dark_forest/mcp/package.json
+++ b/dark_forest/mcp/package.json
@@ -11,7 +11,7 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "mkdir -p build && tsc && node -e \"const fs=require('fs'); if(fs.existsSync('build/index.js')) fs.chmodSync('build/index.js', '755')\"",
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js"
@@ -34,5 +34,8 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
