--- a/dark_forest/mcp/tsconfig.json
+++ b/dark_forest/mcp/tsconfig.json
@@ -16,10 +16,9 @@
       "@darkforest_eth/*": ["node_modules/@darkforest_eth/*"],
       "*": ["node_modules/*"]
     },
-    "allowImportingTsExtensions": true,
     "jsx": "react",
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build"]
