--- a/dark_forest/mcp/tsconfig.json
+++ b/dark_forest/mcp/tsconfig.json
@@ -16,9 +16,10 @@
       "@darkforest_eth/*": ["node_modules/@darkforest_eth/*"],
       "*": ["node_modules/*"]
     },
+    "allowImportingTsExtensions": true,
     "jsx": "react",
     "skipLibCheck": true,
-    "noEmit": false
+    "noEmit": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build"]
