--- a/dark_forest/package.json
+++ b/dark_forest/package.json
@@ -8,6 +8,7 @@
         "events",
         "gamelogic",
         "hashing",
+        "hexgen",
         "mcp",
         "network",
         "procedural",
