--- a/dark_forest/mcp/package.json
+++ b/dark_forest/mcp/package.json
@@ -32,12 +32,14 @@
     "big-integer": "^1.6.51",
     "delay": "^5.0.0",
     "ethers": "^5.7.2",
+    "express": "^4.18.3",
     "fastq": "^1.15.0",
     "mnemonist": "^0.39.5",
     "snarkjs": "^0.7.2",
     "esbuild": "^0.25.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "typescript": "^5.8.3"
   },
