--- a/dark_forest/agent/package.json
+++ b/dark_forest/agent/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "latest",
-    "@spacemangaming/daemon": "=0.2.0-beta.2",
+    "@spacemangaming/daemon": "=0.3.0",
     "@types/bun": "^1.2.8",
     "ioredis": "^5.3.2"
   },
