--- a/dark_forest/agent/mcp_agent.config.yaml
+++ b/dark_forest/agent/mcp_agent.config.yaml
@@ -5,13 +5,22 @@ logging:
 execution:
   durable: false
 
-llm:
-  provider:
-    openai:
-      model: "gpt-4.1"
+execution_engine: asyncio
+logger:
+  transports: [console, file]
+  level: debug
+  progress_display: true
 
-mcp:
-  servers:
+openai:
+  default_model: gpt-4.1
+
+# llm:
+#   provider:
+#     openai:
+#       model: "gpt-4.1"
+
+# mcp:
+  # servers:
     # TODO: This is where MCP servers will go.
     # fetch:
     #   command: "uvx"
