--- a/dark_forest/agent/pyproject.toml
+++ b/dark_forest/agent/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "reflective-agent"
+name = "sputnik"
 version = "0.1.0"
 description = "A reflective agent that has conversations with itself using MCP-Agent"
 requires-python = ">=3.11"
