--- a/dark_forest/agent/mcp_agent.config.yaml
+++ b/dark_forest/agent/mcp_agent.config.yaml
@@ -14,22 +14,13 @@ logger:
 openai:
   default_model: gpt-4.1
 
-# llm:
-#   provider:
-#     openai:
-#       model: "gpt-4.1"
-
-# mcp:
-  # servers:
-    # TODO: This is where MCP servers will go.
-    # fetch:
-    #   command: "uvx"
-    #   args: ["mcp-server-fetch"]
-    # filesystem:
-    #   command: "npx"
-    #   args:
-    #     [
-    #       "-y",
-    #       "@modelcontextprotocol/server-filesystem",
-    #       "<add_your_directories>",
-    #     ]
+mcp:
+  servers:
+    dark_forest:
+      transport: "sse"
+      url: "https://games-346o.onrender.com/sse"
+      description: "A remote MCP server that allows you to interact with the Dark Forest video game, getting information about your Dark Forest player and make moves in the game."
+    solana:
+      transport: "sse"
+      url: "https://solana-mcp.onrender.com/sse"
+      description: "A remote MCP server that allows you to interact with the Solana blockchain, getting information from it and interacting with it."
