--- a/sputnik/package.json
+++ b/sputnik/package.json
@@ -14,6 +14,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@supabase/supabase-js": "^2.49.4",
     "@types/three": "^0.175.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.3.0",
     "postprocessing": "^6.37.2",
     "react": "^19.0.0",
